2014-07-21  Titus Brown <t@idyll.org>

    * sandbox/saturate-by-median.py: introduce new sandbox script for
	saturation analysis of low-coverage data sets.

2014-07-10 Joe Stein <joeaarons@gmail.com>

    * sandbox/readstats.py: fixed divide-by-zero error, issue #458

2014-07-06  Titus Brown <t@idyll.org>

    * doc/release.txt: fix formatting.

2014-06-20 Chuck Pepe-Ranney <chuck.peperanney@gmail.com>

    * scripts/extract-partitions.py: added epilog documentation for 
	<base>.dist columns.

2014-06-20  Michael R. Crusoe <mcrusoe@msu.edu>

    * doc/release.txt: Add Coverity Scan to release checklist

2014-06-19  Michael R. Crusoe  <mcrusoe@msu.edu>

    * lib/read_aligner.{cc,hh},khmer/_khmermodule.cc,setup.py,
    tests/test_read_aligner.py,sandbox/{normalize-by-align,read-aligner}.py:
    Update of @fishjord's graph alignment work
    * lib/{aligner,kmer,node}.{cc,hh},tests/test_align.py: removed as they are
    superceded by the above
    * Makefile: fixed wildcards
    * tests/read_parsers.py: tests that are too complicated to run with
    Valgrind's memcheck are now marked @attr('multithread')

2014-06-16  Titus Brown  <t@idyll.org>

    * doc/release.txt: updated release process.
    * doc/known-issues.txt: updated known-issues for v1.1 release
    * doc/release-notes/: added release notes for 1.0, 1.0.1, and 1.1

2014-06-16  Michael R. Crusoe  <mcrusoe@msu.edu>

    * scripts/{abundance-dist-single,filter-abund-single,load-into-counting,
    normalize-by-median,load-graph}.py: restore Python 2.6 compatability for
    Debian 6, RedHat 6, SL6, and Ubuntu 10.04 LTS users.

2014-06-15  Titus Brown  <t@idyll.org>

    * doc/scripts.txt: removed sweep-reads.py from script documentation.
    * scripts/sweep-reads.py, scripts/sweep-files.py: moved sweep-reads.py
	and sweep-files.py over to sandbox.
    * tests/test_sandbox_scripts.py: created a test file for scripts in
	sandbox/; skip when not in developer mode (e.g. installed egg).